--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -10,8 +10,9 @@ name: Gradle Package
 on:
   release:
     types: [created]
-  branch:
-    - main
+  push:
+    branches:
+      - main
 
 jobs:
   build:
